--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "My hackerrank solutions",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/marcterradas/hackerrank#readme",
   "devDependencies": {
+    "eslint": "^8.14.0",
     "jest": "27.5.1"
   }
 }
