--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/marcterradas/hackerrank#readme",
   "devDependencies": {
-    "eslint": "^8.14.0",
-    "jest": "27.5.1"
+    "eslint": "8.14.0",
+    "eslint-config-prettier": "8.5.0",
+    "jest": "27.5.1",
+    "prettier": "2.6.2"
   }
 }
